# agent-vault

./: .gitignore  00-INDEX-SYNTHESE.md  01-ANALYSE-RISQUES.md  02-ARCHITECTURE-CIBLE.md  03-FLUX-CRYPTOGRAPHIQUES.md  04-CYCLE-VIE-SECRET.md  05-ROTATION-SANS-COUPURE.md  06-MODE-DEGRADE.md  07-INTERFACE-GESTION.md  08-CHOIX-TECHNIQUES-ANTI-PATTERNS.md  Cargo.toml  IMPLEMENTATION_STATUS.md  PACKAGING.md  README.md  TODO.md
deb/: control  postinst  postrm  prerm
deploy/: config.toml.example  install.sh  license-agent.service
docs/: CONFIGURATION.md  DEPLOIEMENT.md
examples/: build-all.sh  fix-all-permissions-complete.sh  generate-rsa-keys.sh  generate-server-tls.sh  install-agent.sh  install-client-app.sh  install-license-server.sh
examples/client-app/: Cargo.toml
examples/client-app/src/: main.rs
examples/license-server/: Cargo.toml
examples/license-server/src/: main.rs
scripts/: build-package.sh  build-rpm.sh  build-tarball.sh
src/: audit.rs  cli.rs  config.rs  core.rs  crypto.rs  ipc.rs  lib.rs  license.rs  main.rs  metrics.rs  rotation.rs  secret.rs  tpm.rs  types.rs
tests/: integration_test.rs
