[package]
name = "license-secret-agent"
version = "0.1.0"
edition = "2021"
authors = ["License Agent Team"]
description = "License Secret Agent - Service de protection de licences applicatives"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# Cryptographie
ring = "0.17"
aes-gcm = "0.10"
rsa = { version = "0.9", features = ["sha2", "oaep"] }
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"

# TPM
tss-esapi = "8.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Zeroization
zeroize = { version = "1.6", features = ["zeroize_derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Network
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }

# System
libc = "0.2"
nix = { version = "0.27", features = ["socket", "uio"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
base64 = "0.21"
hex = "0.4"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Metrics
prometheus = "0.13"

# HTTP Server (pour API REST optionnelle)
actix-web = { version = "4.4", features = ["rustls", "json"] }
actix-rt = "2.9"

# Certificates
rustls = "0.21"
rustls-pemfile = "1.0"

# Rate limiting
governor = "0.6"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[[bin]]
name = "license-agent"
path = "src/main.rs"

[[bin]]
name = "license-agent-cli"
path = "src/bin/license-agent-cli.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
