[package]
name = "client-app"
version = "0.1.0"
edition = "2021"

[dependencies]
license-secret-agent = { path = "../.." }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
base64 = "0.21"
