[package]
name = "license-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "license-server"
path = "src/main.rs"

[dependencies]
license-secret-agent = { path = "../.." }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
aes-gcm = "0.10"
aead = "0.5"
generic-array = "0.14"
rand = "0.8"
base64 = "0.21"
uuid = { version = "1.6", features = ["v4"] }
